--- a/Styles.css
+++ b/Styles.css
@@ -13,7 +13,7 @@ body{
 }
 
 h1{
-    text-shadow: 1px 2px 2px black, 0 0 25px green, 0 0 5px green;
+    
     text-align: center;
 }
 
@@ -21,13 +21,14 @@ h1{
     margin: 10px 20px;
     box-shadow: 0 4px 8px 0 lightgreen, 0 6px 20px 0 black ;
     float: left;
-    width: 350px;
+    width: 200;
+    height: 300;
 
 }
 
 .BibliotecaJuegos img{
-    width: 100%;
-    height: auto;
+    width: 200;
+    height: 500;
 }
 
 .BibliotecaJuegos:hover{
@@ -37,7 +38,7 @@ h1{
 
 .pie{
     text-align: center;
-    text-shadow: 2px 2px 5px yellowgreen;
+    
     padding: 10px;
 }
 
@@ -121,4 +122,10 @@ ul.slider li:target{
     opacity: 1;
 }
 
+.JuegoExterno{
+    width: 100%;
+    height: 800px;
+    border: none;
+
+}
 
